--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/react": "^2.5.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -14,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-timer-hook": "^3.0.5",
     "web-vitals": "^2.1.4"
@@ -42,7 +44,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.36.0",
+    "eslint": "5.12.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
