--- a/package.json
+++ b/package.json
@@ -54,5 +54,6 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "gh-pages": "^5.0.0"
-  }
+  },
+  "homepage": "https://yaroshuk.github.io/BitcoinBonus"
 }
