--- a/package.json
+++ b/package.json
@@ -55,5 +55,5 @@
     "eslint-plugin-react": "^7.32.2",
     "gh-pages": "^5.0.0"
   },
-  "homepage": "https://yaroshuk.github.io/BitcoinBonus"
+  "homepage": "./"
 }
