--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "5.12.0",
+    "eslint": "^5.6.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
